--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       var li = document.createElement("li");
       li.innerText = 
         data[key].name + ": " + (100*data[key].similarity).toFixed(0) 
-        + "% Match" + " Species: " + data[key].details.species;
+        + "% Match" + " -- Species: " + data[key].details.species;
       ul.append(li);
     }
     //for each item in the list. Should be 15 max. Pull the needed info and put
