--- a/results.html
+++ b/results.html
@@ -44,6 +44,11 @@
             text-align:left;
        		}
 
+          .button{
+            position: relative;
+            float: right;
+          }
+
        	</style>
 
 
@@ -84,7 +89,7 @@
       <input type="text" name="cSearch" id="cSearch"> 
     </div>
     <div id="cSubmit" style="position:relative; top:5px;" >
-      <button id="cSubmitButton" type="button" onclick="Recommend()"> I'm
+      <button id="cSubmitButton" type="button" class="button" onclick="Recommend()"> I'm
       feeling lucky </button>
     </div>
 </div>
