--- a/results.html
+++ b/results.html
@@ -44,6 +44,7 @@
             -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;
             text-align:left;
+            word-spacing:30px;
        		}
        	</style>
 
