--- a/results.html
+++ b/results.html
@@ -45,6 +45,7 @@
             -webkit-box-orient: vertical;
             text-align:left;
             word-spacing:10px;
+            font-family: Lucida Grande;
        		}
        	</style>
 
