--- a/results.html
+++ b/results.html
@@ -19,6 +19,7 @@
             margin-top:40px;
             width:750px;
             height:135px;
+            font-family: Lucida Grande;
        		}
 
        		.box1{
@@ -35,6 +36,7 @@
        			height: 30px;
        			margin:1px 0px 5px 0px ;
             text-align:center;
+            font-family: Lucida Grande;
        		}
 
        		.box2{  
