--- a/results.html
+++ b/results.html
@@ -60,7 +60,8 @@
       <div id="strainTitle" style="font-size: 20px; 
                                    text-align:left;
                                    margin-bottom: 0px;
-                                   font-family: arial">
+                                   font-family: Lucida Grande;
+                                   font-weight: bold;">
       </div>
       
       <div class="box1" id="strainNoids">
