--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
        			width: 40px;
        			height: 30px;
        			margin:1px 0px 5px 0px ;
-            text-align:center;
+            text-align:left;
             font-family: Lucida Grande;
        		}
 
@@ -57,7 +57,7 @@
 			
       <img id="strainPicture" src="logo.png" width="130" height="130" alt="picture of Bubble gum" class="float-img">
       
-      <div id="strainTitle" style="font-size: 20px; 
+      <div id="strainTitle" style="font-size: 15px; 
                                    text-align:left;
                                    margin-bottom: 0px;
                                    font-family: Lucida Grande;
