--- a/results.html
+++ b/results.html
@@ -83,7 +83,8 @@
 
 
 
-<div id="container" style="position:relative;"> 
+<div id="container" style="position:relative;">
+    <a style="text-decoration:none" href="http://cannagenie.net"> 
     <!img src="logo.png" alt="CannaGenie Logo"><br>
     <div id="cSearchBar" style="max-width:500px;">
       <input type="text" name="cSearch" id="cSearch"> 
