--- a/results.html
+++ b/results.html
@@ -69,6 +69,7 @@
       </div>
 
 			<div id="strainDescription" class="box2">
+        <a style="text-decoration:none" href="http://cannagenie.net"> </a>
       </div>
       
       <div style="clear:both">
@@ -84,8 +85,7 @@
 
 
 <div id="container" style="position:relative;">
-    <a style="text-decoration:none" href="http://cannagenie.net"> 
-    <!img src="logo.png" alt="CannaGenie Logo"><br>
+    <img src="logo.png" alt="CannaGenie Logo"><br>
     <div id="cSearchBar" style="max-width:500px;">
       <input type="text" name="cSearch" id="cSearch"> 
     </div>
