--- a/results.html
+++ b/results.html
@@ -69,7 +69,6 @@
       </div>
 
 			<div id="strainDescription" class="box2">
-        <a style="text-decoration:none" href="http://cannagenie.net"> </a>
       </div>
       
       <div style="clear:both">
@@ -85,7 +84,7 @@
 
 
 <div id="container" style="position:relative;">
-    <img src="logo.png" alt="CannaGenie Logo"><br>
+    <!img src="logo.png" alt="CannaGenie Logo"><br>
     <div id="cSearchBar" style="max-width:500px;">
       <input type="text" name="cSearch" id="cSearch"> 
     </div>
