--- a/results.html
+++ b/results.html
@@ -25,6 +25,7 @@
        		.box1{
        			position: relative;
        			overflow: hidden;
+            border-color: black;
        		}
 
 
@@ -37,6 +38,7 @@
        			margin:1px 0px 5px 0px ;
             text-align:left;
             font-family: Lucida Grande;
+            border-color:yellow;
        		}
 
        		.box2{  
@@ -47,6 +49,7 @@
             -webkit-box-orient: vertical;
             text-align:left;
             font-family: Lucida Grande;
+            border-color: green;
        		}
        	</style>
 
