--- a/results.html
+++ b/results.html
@@ -24,7 +24,7 @@
        		.box1{
        			position: relative;
        			overflow: hidden;
-            border-color: black;
+            border: black;
        		}
 
 
@@ -37,7 +37,7 @@
        			margin:1px 0px 5px 0px ;
             text-align:left;
             font-family: Lucida Grande;
-            border-color:yellow;
+            border:yellow;
        		}
 
        		.box2{  
@@ -48,7 +48,7 @@
             -webkit-box-orient: vertical;
             text-align:left;
             font-family: Lucida Grande;
-            border-color: green;
+            border: green;
        		}
        	</style>
 
