--- a/results.html
+++ b/results.html
@@ -8,6 +8,7 @@
 
        	<style>
        		.float-img{
+              position: relative;
        			  float:left;
        			  margin-right: 10px;
        		}
@@ -19,6 +20,7 @@
             width:750px;
             height:135px;
             font-family: Lucida Grande;
+            background-color: blue;
        		}
 
        		.box1{
