--- a/strain.html
+++ b/strain.html
@@ -6,4 +6,4 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link href="jquery.tag-editor.css" rel="stylesheet" type="text/css" media="all">
 
-       	<h1> Hello </h1>
+       	<h1 style="text-align:center"> Hello This is where all the description will be </h1>
