--- a/results.html
+++ b/results.html
@@ -58,8 +58,10 @@
 <template>
   <div style="margin-left: 125px;">
 		<div class="container1"> 
-			<a style="text-decoration:none" href="strain.html"> </a>
+			<a style="text-decoration:none" href="strain.html"> 
       <img id="strainPicture" src="logo.png" width="130" height="130" alt="picture of Bubble gum" class="float-img">
+      
+      </a>
       
       <div id="strainTitle" style="font-size: 18px; 
                                    text-align:left;
