--- a/results.html
+++ b/results.html
@@ -65,10 +65,11 @@
 
       
         <div style="font-size: 18px; 
-                                   text-align:left;
-                                   margin-bottom: 0px;
-                                   font-family: Lucida Grande;
-                                   font-weight: bold;">
+                    text-align:left;
+                    margin-bottom: 0px;
+                    font-family: Lucida Grande;
+                    font-weight: bold;
+                    line-height: 1.5">
 
           <a style="text-decoration:none" id="strainTitle" href="strain.html">
           </a>
