--- a/results.html
+++ b/results.html
@@ -69,7 +69,7 @@
                     margin-bottom: 0px;
                     font-family: Lucida Grande;
                     font-weight: bold;
-                    line-height: 1.5">
+                    line-height: 1.5px">
 
           <a style="text-decoration:none" id="strainTitle" href="strain.html">
           </a>
