--- a/results.html
+++ b/results.html
@@ -51,6 +51,7 @@
             text-align:left;
             font-family: Lucida Grande;
             background-color: green;
+            line-height: 1.5;
        		}
        	</style>
 
@@ -68,8 +69,7 @@
                     text-align:left;
                     margin-bottom: 0px;
                     font-family: Lucida Grande;
-                    font-weight: bold;
-                    line-height: 1.5px">
+                    font-weight: bold;">
 
           <a style="text-decoration:none" id="strainTitle" href="strain.html">
           </a>
