before dispensary addition

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     if(cSearchText.length > 0)
     {
       socket.close();
-      window.location = "results.html?" + "search=" + cSearchText + "&";
+      window.location = "results.html?" + "search=" + cSearchText + "&dispensary=";
     }
   }
 /*
