--- a/results.html
+++ b/results.html
@@ -54,9 +54,8 @@
        		}
        	</style>
 
-
 <template>
-  <div style="margin-left: 125px;">
+  <li>
 		<div class="container1"> 
 			<a style="text-decoration:none" href="strain.html"> 
       <img id="strainPicture" src="logo.png" width="130" height="130" alt="picture of Bubble gum" class="float-img">
@@ -83,12 +82,29 @@
       <div style="clear:both">
       </div>
     </div>
-  </div>
+  </li>
 </template>
+
 <template>
   <div class="box1_1" id="noid"> 
 	</div>
 </template>
+
+
+
+
+
+<template>
+  <li>
+    <div>Illinous dispensary</div>
+    <ul id="dispensaryResults" style="list-style-type:none; margin-left:0px;"></ul>
+  </li>
+</template>
+
+
+
+
+
 
 
 <div id="container" style="position:relative; margin-top:10px; margin-left:10px;
@@ -105,7 +121,7 @@ min-height:100%;">
     <div style="clear:both"></div>
 
 <br>
-<ul id="results" style="list-style-type:none;">
+<ul id="results" style="list-style-type:none; margin-left:125px;">
 </ul>
 
 <center>
@@ -118,20 +134,10 @@ min-height:100%;">
   var socket = io();
   var socketId = null;
 
-  parameterDict = {};
-
-  url = window.location.href;
+  const urlParams = new URLSearchParams(window.location.search);
+  var searchValue = urlParams.get("search");
+  var searchDispensary = urlParams.get("dispensary");
   
-  var start = 0;
-  var end = 0;
-
-    var searchStart = url.indexOf("=",47);
-    var searchEnd = url.indexOf("&",searchStart);
-    var searchString = url.substring(searchStart,searchEnd).replace("=","");
-    searchString = searchString.replace(/%20/g," ").replace(/%27/g,"'");
-    //parse website parameters
-
-  console.log(searchStart);
 
 /*
 --------------------------------------------
@@ -153,7 +159,8 @@ min-height:100%;">
     if(cSearchText.length > 0)
     {
       socket.close();
-      window.location = "results.html?" + "search=" + cSearchText + "&";
+      window.location = "results.html?" + "search=" + cSearchText +
+      "&dispensary=";
     }
   }
 /*
@@ -165,9 +172,9 @@ min-height:100%;">
   {
     socketId = socket.id;
 
-        console.log(searchString);
+        console.log(searchValue);
 
-    SendSocket("recommend", searchString);
+    SendSocket("recommend", searchValue);
   });
   //get unique ID when connected.
 
@@ -178,9 +185,19 @@ min-height:100%;">
       data =  data.Data;
 
 
-      var ul =document.getElementById("results");
+      var ul = document.getElementById("results");
       ul.innerHTML = "";
       //get unordered list and clear of list items.
+
+      var dispensary = document.getElementsByTagName("template")[2];     
+
+      if(searchDispensary.length == 0)
+      {
+        var dispensaryClone = dispensary.content.cloneNode(true);   
+        var dul = dispensaryClone.querySelector("#dispensaryResults");
+        ul.append(dispensaryClone);
+        ul = dul;
+      }
 
       var result = document.getElementsByTagName("template")[0];     
       var noid = document.getElementsByTagName("template")[1];     
@@ -235,6 +252,8 @@ min-height:100%;">
         data[key].details.description;
 
         ul.append(liClone);
+        if(searchDispensary.length == 0)
+          break;
       }
       //for each item in the list. Should be 15 max. Pull the needed info and put
       //into a list item. append list item to unordered list.
@@ -248,7 +267,7 @@ min-height:100%;">
 */
  
     $('#cSearch').tagEditor({
-      initialTags: searchString.split(","),
+      initialTags: searchValue.split(","),
       delimiter: ',\t', 
       placeholder: 'Enter CannaGenie Tags...',
       forceLowercase: true,
