moving to local

--- a/index.html
+++ b/index.html
@@ -17,7 +17,38 @@
       feeling lucky </button>
     </div>
 </div>
+</center>
 
+<style>
+.websiteArea
+{
+  min-Width:600px;
+}
+</style>
+
+<div id="websiteArea"
+class="websiteArea">
+
+  <div id="logoSearchArea">
+    <center>
+    <div id="logoArea">
+      <div id="name">
+        <img src="logo.png" alt="CannaGenie Logo"><br>
+      </div>
+      <div id="slogan">
+        Your Personalized Strain Finder
+      </div>
+    </div>
+    <div id="Search Area">
+
+      <input type="text" name="cSearch" id="cSearch"> 
+      <img height="100" width="100" src="searchLogo.png">
+      
+    </div>
+    </center>
+  </div>
+
+</div>
 
 <script>
   var socket = io();
