new results page HTML finished. Waiting on javascript.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
 
 
 
-<script>
-$("#submit").Click(function()
-{
-console.log("hello");
-});
-
-</script>
 <style>
 
 body
@@ -27,12 +20,11 @@ z-index:-1;
 }
 body::after
 {
-background: url("images/background.jpeg");
+background: url("images/background_copy.jpg");
 background-repeat: no-repeat;
 background-size:cover;
 content:'';
 position:absolute;
-opacity:0.3;
 top: 0;
 bottom: 0;
 right: 0;
@@ -72,40 +64,25 @@ color:#336600;
 font-size:16px;
 color:#336600;
 }
-
 #searchArea
 {
-width:350px;
+width:400px;
 position:relative;
 }
 #input+.tag-editor
 {
 position:absolute;
-color:black;
-background-color:#6bab51;
-width:350px;
+width:400px;
 z-index:0;
 border:2px solid black;
-}
-.ui-autocomplete 
-{ 
-background-color:#6bab51;
-color:black;
-position: absolute; 
-top: 0; 
-left: 0; 
-cursor: default; 
-font-size: 14px; 
-max-height: 300px; 
-overflow: auto;
 }
 #help
 {
 position:absolute;
 color:black;
-left:332px;
+left:382px;
 height:22px;
-width:23px;
+width:27px;
 z-index:1;
 font-size:25px;
 cursor:pointer;
@@ -114,7 +91,7 @@ cursor:pointer;
 #submit
 {
 position:absolute;
-left:360px;
+left:410px;
 height:30;
 width:60;
 z-index:1;
@@ -163,9 +140,7 @@ border-style:solid;
 <div id="websiteArea">
     <center>
   <div id="header">
-    <div id="user">
     <img id="icon" src="images/logo/user.png">
-    </div>
   </div>
 
   <div id="body">
@@ -182,22 +157,22 @@ border-style:solid;
     <div id="searchArea">
       <input type="text" name="input" id="input"> 
       <div id="help">?</div>
-      <img onClick="getValues();"id="submit" src="images/logo/submit.png">
+      <img id="submit" src="images/logo/submit.png">
     </div>
   </div>
 
   <div id="footer">
     <div id="linkArea">
-      <div id="socialMedia" class="leftLink">
+      <div id="socialMedia" class="leftLink link">
         Social Media
       </div>
-      <div id="mission" class="leftLink">
+      <div id="mission" class="leftLink link">
         Mission
       </div>
-      <div id="technology" class="rightLink">
+      <div id="technology" class="rightLink link">
         Technology
       </div>
-      <div id="aboutUs"class="rightLink">
+      <div id="aboutUs"class="rightLink link">
         About us
       <div style="clear:both;"></div>
       </div>
@@ -208,6 +183,32 @@ border-style:solid;
     </center>
 </div>
 </body>
+
+<script>
+$("#icon").click(function()
+{
+});
+$("#help").click(function()
+{
+});
+
+$("#submit").click(function()
+{
+var search = document.getElementById("input").value;
+
+  if(search.length == 0)
+  {
+    //go to strain of the day
+  }
+  else
+  {
+    getValues();
+  }
+});
+
+$(".link").click(function() { window.location = this.id + ".html"; });
+</script>
+
 <script>
   var socket = io();
   var socketId = "";
@@ -225,7 +226,6 @@ border-style:solid;
 
   function getValues()
   {
-  console.log("hello");
     var cSearchText = document.getElementById("input").value;
     document.getElementById("input").value = "";
     //get then reset .value incase user hit back button on result page
