Strain html layout

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ $(".link").click(function() { window.location = this.id + ".html"; });
     if(cSearchText.length > 0)
     {
       socket.close();
-      window.location = "results.html?" + "search=" + cSearchText + "&dispensary=";
+//      window.location = "results.html?" + "search=" + cSearchText + "&dispensary=";
     }
   }
 /*
