--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ height:150px;
 float:right;
 top:20px;
 left:885px;
+width:80px;
+height:50px;
 cursor:pointer;
 margin-top: 20px;
 margin-right: 20px;
@@ -78,6 +80,8 @@ cursor:pointer;
 
 #submit
 {
+-webkit-transform: scaleX(-1);
+transform: scaleX(-1);
 position:absolute;
 left:410px;
 height:30;
@@ -99,7 +103,7 @@ cursor:pointer;
 .rightLink
 {
   float:right;
-  margin-left:120px;
+  margin-left:110px;
   margin-right:15px;
   margin-bottom:10px;
   cursor:pointer;
@@ -109,7 +113,7 @@ cursor:pointer;
 .leftLink
 {
   float:left;
-  margin-right:120px;
+  margin-right:110px;
   margin-left:15px;
   margin-bottom:10px;
   cursor:pointer;
