--- a/results.html
+++ b/results.html
@@ -23,7 +23,7 @@ font-weight: bold;
 .horizontalScrollArea
 {
 margin-top:20px;
-overflow-x: scroll;
+overflow-x: auto;
 overflow-y: hidden;
 white-space: nowrap;
 }
@@ -122,7 +122,7 @@ margin-right: 20px;
 #searchArea
 {
 margin-left:125px;
-height:180px;
+height:190px;
 width:600px;
 }
 #searchResult
