Search results are populated

--- a/results.html
+++ b/results.html
@@ -23,9 +23,13 @@ font-weight: bold;
 .horizontalScrollArea
 {
 margin-top:20px;
-overflow-x: auto;
+overflow-x: hidden;
 overflow-y: hidden;
 white-space: nowrap;
+}
+.horizontalScrollArea:hover
+{
+overflow-x: auto;
 }
 .horizontalScrollItem
 {
