--- a/strain.html
+++ b/strain.html
@@ -1,11 +1,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="html_library/jquery.caret.js"></script>
-<script src="html_library/jquery.tag-editor.min.js"></script>
+<script src="library/jquery.caret.js"></script>
+<script src="library/jquery.tag-editor.min.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link href="html_library/jquery.tag-editor.css" rel="stylesheet" type="text/css" media="all">
+<link href="library/jquery.tag-editor.css" rel="stylesheet" type="text/css" media="all">
 <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
+
+<script src="library/socket.js"></script>
+
 
 
 
@@ -229,7 +232,7 @@ var search = document.getElementById("input").value;
   }
   else
   {
-    getValues();
+    Recommend();
   }
 });
 $("#icon").click(function()
@@ -238,33 +241,12 @@ $("#icon").click(function()
 
 
 
-  var socket = io();
-  var socketId = null;
-
-  const urlParams = new URLSearchParams(window.location.search);
-  var searchValue = urlParams.get("search");
-  var searchStrain = urlParams.get("strain");
-  var searchMatch = urlParams.get("match");
-
-  if(searchValue == null)
-    searchValue = "";
-  
 
 /*
 --------------------------------------------
             Functions
 --------------------------------------------
 */
-  function SendSocket(id,data)
-  {
-    var obj = { ID:socketId, Data:data };
-    socket.emit(id, obj)
-  }
-
-  function getValues()
-  {
-    Recommend();
-  }
 
   function Recommend()
   {
@@ -278,11 +260,6 @@ $("#icon").click(function()
       window.location = "results.html?" + "search=" + cSearchText;
     }
   }
-
-  function GenerateSearch(list)
-  { 
-    SendSocket("GenerateSearch",list);
-  }
 /*
 --------------------------------------------
             Socket functions
@@ -290,19 +267,15 @@ $("#icon").click(function()
 */
   socket.on("connect", function(data)
   {
-    socketId = socket.id;
-
-        console.log(searchValue);
-
-    GenerateSearch(searchStrain);
+    GenerateSearch(GetSearch("strain"));
   });
   //get unique ID when connected.
 
   socket.on("SearchResult", function(data)
   {
-    if(data.ID == socketId)
+    if(data.id == GetId())
     {
-      data =  data.Data[0];
+      data =  data.payload[0];
 
       var strainArea = document.getElementById("strainArea");
         
@@ -328,41 +301,21 @@ $("#icon").click(function()
             Tag search bar instance
 --------------------------------------------
 */
- 
-    $('#input').tagEditor({
-      initialTags: searchValue.split(","),
-      delimiter: ',\t', 
-      placeholder: 'Enter CannaGenie Tags...',
-      forceLowercase: true,
-      autocomplete: {
-        delay:0 , 
-        minLength: 1, 
-        source: function(request, response) 
-        {
-          socket.emit("search",request.term, function (data)
-          {
-            response(data);
-          });
-        }
-      }
-  });
-  
-  $("#input").keyup(function(event)
-  {
-    console.log("down");
-    if(event.keycode == 13)
-    {
-      Recommend();
-    }
-  });
-
-  $(document).keydown(function(event)
-  {
-    if(event.which == 13)
-    {
-      Recommend();
-    }
-  });
-
-
 </script>
+
+
+
+
+
+
+<script src="library/searchBar.js"></script>
+
+
+
+
+
+
+
+
+
+
